fix variable name, testing get max score
